--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,14 @@
 .App {
-  text-align: center;
+  display: flex;
+  justify-content: center; /* Center horizontally */
+  align-items: center;     /* Center vertically */
+  color: white;
+  background-color: rgb(82, 82, 82); /* Set a contrasting background color */
+  min-height: 100vh; /* Full viewport height */
+  overflow: auto;    /* Allow scrolling if content overflows */
+  padding: 20px;   
+  box-sizing: border-box;
+  width: 100%;
 }
 
 .App-logo {
