--- a/src/Resume.css
+++ b/src/Resume.css
@@ -1,35 +1,37 @@
 /* src/Resume.css */
 .resume {
-    font-family: Arial, sans-serif;
-    margin: 20px;
-    padding: 20px;
-    color: white;
-    background-color: rgb(82, 82, 82); /* Set a contrasting background color */
-  }
+  width: 100%; /* Ensure the resume takes full width of the container */
+  max-width: 800px; /* Set a maximum width for the resume */
+  padding: 20px; /* Padding inside the content */
+  box-sizing: border-box; /* Include padding in the element's total width and height */
+  word-wrap: break-word; /* Ensure long words break and wrap to the next line */
+  overflow-wrap: break-word; /* Ensure long words break and wrap to the next line */
+  text-align: justify; /* Justify text for better readability */
+  hyphens: auto;
+}
 
-  .justified-text {
-    text-align: justify;
-    hyphens: auto;
-  }
-  
-  .resume h1, .resume h2, .resume h3, .resume h4 {
-    margin: 10px 0;
-  }
-  
-  .resume p, .resume ul {
-    margin: 5px 0;
-  }
-  
-  .resume ul {
-    list-style-type: disc;
-    padding-left: 20px;
-  }
-  
-  .resume a {
-    color: #cde3fb;
-    text-decoration: none;
-  }
-  
-  .resume a:hover {
-    text-decoration: underline;
-  }
+.resume h1,
+.resume h2,
+.resume h3,
+.resume h4 {
+  margin: 10px 0;
+}
+
+.resume p,
+.resume ul {
+  margin: 5px 0;
+}
+
+.resume ul {
+  list-style-type: disc;
+  padding-left: 20px;
+}
+
+.resume a {
+  color: #cde3fb;
+  text-decoration: none;
+}
+
+.resume a:hover {
+  text-decoration: underline;
+}
